<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scan_content_description"
                android:text="@string/scan_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/eancontainer"
            android:layout_marginTop="@dimen/add_book_top_margin_title"
            android:paddingEnd="@dimen/add_book_end_margin"
            android:paddingStart="@dimen/add_book_start_margin"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/bookTitle"
            android:layout_marginTop="@dimen/add_book_top_margin"
            android:ellipsize="end"
            android:maxLines="3" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/eancontainer"
            android:layout_below="@+id/bookSubTitle"
            android:layout_marginTop="@dimen/add_book_top_margin"
            android:gravity="end"
            android:maxLines="3"
            android:textSize="@dimen/small_fontsize" />

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignTop="@+id/authors"
            android:contentDescription="@string/book_cover" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_below="@+id/bookCover"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/small_fontsize" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/delete"
                android:drawableStart="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:contentDescription="@string/ok_button"
                android:drawableStart="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
